# Task-Ledger

./: .editorconfig  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: desktop-build.yml  quality.yml
docs/: adapting-the-template.md  architecture.md
packaging/: README.md
packaging/desktop/: main.py
scripts/: check.py
src/task_ledger/: __init__.py  __main__.py
src/task_ledger/application/: __init__.py  ports.py  services.py
src/task_ledger/domain/: __init__.py  errors.py  models.py
src/task_ledger/infrastructure/: __init__.py  json_repository.py  logging.py  paths.py
src/task_ledger/interfaces/: __init__.py  common.py
src/task_ledger/interfaces/cli/: __init__.py  app.py
src/task_ledger/interfaces/desktop/: __init__.py  app.py
src/task_ledger/interfaces/tui/: __init__.py  app.py
tests/: conftest.py
tests/integration/: test_cli.py  test_json_repository.py
tests/unit/: test_models.py  test_services.py
